<resources>
    <string name="app_name">TimelineSchedule</string>
    <string name="tagline">Chandra Superstore Timeline Scadule</string>
    <string name="silahkan_masuk">Silahkan Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="dekorasi">Dekorasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">Name</string>
    <string name="prosess">Di Proses</string>
    <string name="selesai">Selesai</string>
    <string name="no_data">No Data</string>
    <string name="tanggal_dibuat">Tanggal Dibuat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="status">Status</string>
    <string name="judul">Judul</string>
    <string name="invite">Invite</string>
    <string name="keluar">Keluar</string>

    <string-array name="position">
        <item>IT STAFF</item>
        <item>OTHERS..</item>
    </string-array>
</resources>