<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.TaskFragment">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/textList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="Daftar Tugasmu"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:textAllCaps="false"
                android:background="@drawable/shape_ractengle_button"
                android:text="@string/prosess"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textList" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_finish"
                android:background="@drawable/shape_ractangle_button_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/selesai"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btn_process"
                app:layout_constraintStart_toEndOf="@+id/btn_process"
                app:layout_constraintTop_toTopOf="@+id/btn_process" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_timeline"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_process"
                app:layout_constraintVertical_bias="1.0"
                tools:listitem="@layout/list_task" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/First"
                android:indeterminateTint="@color/First"
                android:progressBackgroundTint="@color/First"
                android:progressTint="@color/First"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_no_data"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/no_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_finish" />

            <TextView
                android:id="@+id/txt_nodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_no_data"
                app:layout_constraintEnd_toEndOf="@+id/img_no_data"
                app:layout_constraintStart_toStartOf="@+id/img_no_data" />

        </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>